--- a/app/src/main/res/drawable/background_btn.xml
+++ b/app/src/main/res/drawable/background_btn.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape android:shape="rectangle" >
-        <solid android:color="@color/cl_button"/>
-        <corners android:radius="16dp"/>
-    </shape>
-</item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/cl_button"/>
+    <corners android:radius="8dp"/>
+
+</shape>
