--- a/app/src/main/res/layout/fragment_flights.xml
+++ b/app/src/main/res/layout/fragment_flights.xml
@@ -140,7 +140,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/background_btn"
+                android:background="@drawable/background_btn_blue"
                 android:backgroundTint="@null"
                 android:fontFamily="@font/poppins_medium"
                 android:padding="16dp"
