--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -147,7 +147,7 @@
             android:layout_height="56dp"
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/background_btn"
+            android:background="@drawable/background_btn_blue"
             android:paddingStart="30dp"
             android:paddingTop="10dp"
             android:paddingEnd="30dp"
